<resources>
    <string name="app_name">Trabalho - Arthur e Gustavo</string>
    <string name="cad_participant">Cadastrar participante</string>
    <string name="action_register">Cadastrar</string>
    <string name="hint_e_mail">E-mail</string>
    <string name="hint_name">Nome</string>
    <string name="action_back">Voltar</string>
    <string name="edt_name_empty">Campo Nome obrigatório.</string>
    <string name="edt_email_empty">Campo E-mail obrigatório.</string>
    <string name="successfully_registered">Cadastro realizado com sucesso.</string>
    <string name="hint_editora">Editora</string>
    <string name="hint_ano_de_publicacao">Ano de publicação</string>
    <string name="hint_titulo">Título</string>
    <string name="edt_title_empty">Campo Título obrigatório.</string>
    <string name="edt_publisher_empty">Campo Editora obrigatório.</string>
    <string name="edt_year_empty">Campo Ano obrigatório.</string>
    <string name="cad_book">Cadastrar livro</string>
    <string name="cad_booking">Cadastro de reserva</string>
    <string name="lbl_participant">Participante</string>
    <string name="spn_select">(Selecione)</string>
    <string name="edt_year_over">O ano não deve ser posterior ao atual.</string>
    <string name="participant_define_enter_hour">Horário de entrada definido para participante %1$s.</string>
    <string name="participant_define_exit_hour">Horário de saída definido para participante %1$s.</string>
    <string name="participant_erase_hours">Horários de entrada e saída do participante %1$s foram limpos.</string>
    <string name="det_participant">Detalhes do participante</string>
    <string name="lbl_name">Nome</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_enter_date">Horário de entrada</string>
    <string name="lbl_exit_date">Horário de saída</string>
    <string name="lbl_bookings">Reservas</string>
    <string name="edt_missing">Não informado</string>
    <string name="lbl_book">Livro</string>
    <string name="lbl_title">Título</string>
    <string name="lbl_publisher">Editora</string>
    <string name="lbl_year">Ano</string>
    <string name="det_book">Detalhes do livro</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Excluir</string>
    <string name="msg_book_edit_success">Livro editado com sucesso</string>
    <string name="lbl_confirm_exclusion">Confirmar exclusão</string>
    <string name="lbl_question_confirm_exclusion">Confirma a exclusão deste livro?</string>
    <string name="lbl_yes">Sim</string>
    <string name="lbl_no">Não</string>
    <string name="msg_book_exclusion_success">Livro excluído com sucesso</string>
    <string name="lbl_titulo">Título</string>
    <string name="cad_reservation">Cadastro de Reserva</string>
</resources>
