<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufjf.dcc196.trb1.arthur_e_gustavo.DetailsBookActivity">

    <TextView
        android:id="@+id/txtBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/edtBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBookTitle"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/txtBookPublisher"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_publisher"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtBookTitle" />

    <EditText
        android:id="@+id/edtBookPublisher"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBookPublisher" />

    <EditText
        android:id="@+id/edtBookYear"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/edtBookPublisher"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtBookYear" />

    <TextView
        android:id="@+id/txtBookYear"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_year"
        app:layout_constraintLeft_toRightOf="@+id/txtBookPublisher"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtBookTitle" />

    <ListView
        android:id="@+id/listBookBookings"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtBookBookings" />

    <Button
        android:id="@+id/btnBackDetailsBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listBookBookings" />

    <TextView
        android:id="@+id/txtBookBookings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bookings"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtBookPublisher"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
