<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufjf.dcc196.trb1.arthur_e_gustavo.DetailsParticipantActivity">

    <TextView
        android:id="@+id/txtParticipantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/edtParticipantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtParticipantName" />

    <TextView
        android:id="@+id/txtParticipantEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_email"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtParticipantName"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/edtParticipantEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtParticipantEmail"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/txtParticipantEnterDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_enter_date"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtParticipantEmail"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/edtParticipantEnterDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtParticipantEnterDate"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/txtParticipantExitDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_exit_date"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtParticipantEnterDate"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/edtParticipantExitDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/txtParticipantExitDate"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/txtParticipantBookings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_bookings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtParticipantExitDate" />

    <ListView
        android:id="@+id/listParticipantBookings"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtParticipantBookings" />

    <Button
        android:id="@+id/btnBackDetailsParticipant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listParticipantBookings"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
